[package]
name = "rocco"
version = "0.1.0"
authors = ["creativcoder <creativcoders@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "rocco is a [http://ashkenas.com/docco](http://ashkenas.com/docco) inspired literate programmming library in Rust"
documentation = "https://docs.rs/rocco"
keywords = ["docs", "documentation", "literate", "docco","cargo-docco"]
categories = ["cli", "documentation", "command-line-utilities"]
repository = "https://github.com/creativcoder/rocco"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ramhorns = {version = "0.10.1", features = ["default"] }
comrak = "0.8.2"
thiserror = "1.0.21"
once_cell = "1.4.1"
serde_json = "1.0.59"
serde = { version="1.0.117", features=["derive"] }
